--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     background-color: #0B2434;
     padding: 20px;
+    font-family: 'Karla', sans-serif;
 }
 
 main {
@@ -16,14 +17,27 @@ main {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+}
+
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
 }
 
 .dice-container {
     display: grid;
     grid-template: auto auto / repeat(5, 1fr);
     gap: 20px;
+    margin-bottom: 40px;
 }
 
 .die-face {
@@ -35,7 +49,6 @@ main {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    background-color: white;
 }
 
 .die-num {
